--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio de Olexiy</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <img class="gift" src="https://s01.yapfiles.com/files/2208077/GzHk.gif" alt=""></img>
     <h1>Olexiy Lapko</h1>
     <h2>Estudiante de programacion</h2>
     <p>Hola soy Olexiy tengo 18 años me gusta estudiar programacion</p>
@@ -16,7 +18,11 @@
 </body>
 <ul>
     <li>
+
+        <a href="index1.html">index1</a>
+        <a href="style1.css">stil</a>
         <a href="experiencia.html" target="_blank">experiencia</a>
+        
     </li>
 </ul>
 <ul>
