--- a/pj2/index1.html
+++ b/pj2/index1.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Contacto</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="pizda.html">
+    <link rel="stylesheet" href="style1.css">
+   <script src="index.js" >dfsafkdso</script>
 </head>
 <body>
     <form action="https://formspree.io/f/alexeymalborovich@gmail.com" method="POST">
